# nl2sql-arena

./: .gitignore  Dockerfile  README.md  arena_dsl.py  baseline_run.txt  database.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  server.py  tasks.py
scripts/: validate-submission.sh
server/: app.py
