[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nl2sql-arena"
version = "1.0.0"
description = "An interactive RL arena for training agents to reason over structured data — from natural language to SQL, through a structured Analysis DSL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openenv", "sql", "nl2sql", "reinforcement-learning", "dsl", "enterprise-ai"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "openenv-core>=0.1.0",
    "openai>=1.30.0",
    "faker>=25.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/shambhuyadav/nl2sql-arena"

[tool.openenv]
name = "nl2sql-arena"
version = "1.0.0"
entry_point = "server:app"
port = 7860
